fix: 隐藏页面原生悬浮窗，只使用扩展悬浮窗

--- a/recorder.html
+++ b/recorder.html
@@ -415,8 +415,8 @@
         </div>
     </div>
     
-    <!-- 悬浮窗 -->
-    <div class="float-window" id="floatWindow">
+    <!-- 悬浮窗 - 默认隐藏，只使用扩展的悬浮窗 -->
+    <div class="float-window" id="floatWindow" style="display: none;">
         <div class="float-header">
             <div class="float-status">
                 <span class="status-dot" id="floatRecordStatus"></span>
